--- a/pages/bio.html
+++ b/pages/bio.html
@@ -35,11 +35,8 @@
             </div>
         </div>
     </header>
-    <main>
-        <section class="section-texto-bio">
-            <div>
+    <main class="main-bio">
                 <h1 class="h1-bio">¿Quien es Duki?</h1>
-            </div>
             <div class="text-bio">
                 <p>Duki es un freestyler y cantante argentino. Nació como Mauro Ezequiel Lombardo en Buenos Aires el 24 de junio de 1996.</p>
                 <p>Fue inspirado al escuchar batallar a Kodigo, otro rapero nacional.</p>
@@ -85,13 +82,9 @@
                 El 18 de junio el artista uruguayo Mesita y Duki estrenan el single "Ceo".<br>
                 El 24 del mismo mes lanza un single titulado "Tu silencio" junto al artista MKS.</p>
             </div>
-            
-        </section>
-        <section class="section-img-bio">
-            <img src="../img/duki-bio.jpeg" alt="">
-        </section>   
+            <img class="img-bio" src="../img/duki-bio.jpeg" alt="">   
     </main>
-    <footer>
+    <footer class="footer-bio">
         <!--REDES-->
         <ul>
             <li><a href="https://x.com/DukiSSJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../img/twitter-alt-square.png" alt=""></a></li>
